WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280509
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycontent-left-001.html
https://bugs.webkit.org/show_bug.cgi?id=280509
Summary
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycont...
alan
Reported
2024-09-27 05:36:41 PDT
ssia
Attachments
[fast-cq]Patch
(2.18 KB, patch)
2024-09-27 05:39 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-09-27 05:39:10 PDT
Created
attachment 472702
[details]
[fast-cq]Patch
EWS
Comment 2
2024-09-27 06:55:29 PDT
Committed
284356@main
(9bbda4624357): <
https://commits.webkit.org/284356@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472702
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-09-27 06:56:15 PDT
<
rdar://problem/136828090
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug