[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycontent-left-001.html https://bugs.webkit.org/show_bug.cgi?id=280509

Reviewed by Antti Koivisto.

Flex layout returns inner size based rects. Let's take border and padding into account when translating logical to visual position.

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::setFlexItemsGeometry):

Canonical link: https://commits.webkit.org/284356@main